name:                haskell-otp
version:             0.1.0.0
synopsis:            Haskell single-node implementation of Erlang/OTP patterns
description:         Haskell single-node implementation of Erlang/OTP patterns
license:             MIT
license-file:        LICENSE
author:              Ilya Rezvov
maintainer:          i.rezvov@yandex.ru
copyright:           (c) Ilya Rezvov 2014
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

source-repository   head
  type:             git
  location:         https://github.com/SPY/haskell-otp.git

library
  default-language:    Haskell2010
  exposed-modules:     Concurrency.OTP.Process
                       Concurrency.OTP.GenServer
  -- other-modules:       
  build-depends:       base >= 4.6 && <= 4.8,
                       mtl >= 2.1,
                       stm >= 2.4,
                       stm-chans >= 3.0,
                       containers >= 0.5,
                       exceptions >= 0.1
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind

test-suite tests
  hs-source-dirs:      tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base >= 4.6,
                       haskell-otp,
                       HTF >= 0.10,
                       mtl >= 2.1
  default-language:    Haskell2010
  ghc-options:         -threaded
